gitops/security/kyverno/base/policies/baseline.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-baseline-audit
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restricted-exclude-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Capabilities must be restricted."
        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
