gitops/security/kyverno/base/policies/supply-chain.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supply-chain
spec:
  validationFailureAction: Audit
  background: true
  rules:
    # 1. Restrict Registries
    - name: restrict-image-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Images must come from approved registries (GHCR, Docker Hub, Quay)."
        pattern:
          spec:
            containers:
              - image: "ghcr.io/* | docker.io/* | quay.io/* | registry.k8s.io/* | public.ecr.aws/*"

    # 2. Block ':latest' Tag (Unstable)
    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - backstage # Often built locally as 'latest' during dev
      validate:
        message: "Using a mutable image tag e.g. 'latest' is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
